force-app/main/default/objects/LogDetail__c/fields/EventUUID__c.field-meta.xml
<CustomField>
    <fullName>EventUUID__c</fullName>
    <label>EventUUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>