force-app/main/default/objects/LogDetail__c/fields/IsFuture__c.field-meta.xml
<CustomField>
    <fullName>IsFuture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFuture</label>
    <type>Checkbox</type>
</CustomField>