force-app/main/default/objects/LogDetail__c/fields/IsScheduled__c.field-meta.xml
<CustomField>
    <fullName>IsScheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsScheduled</label>
    <type>Checkbox</type>
</CustomField>