force-app/main/default/objects/LogDetail__c/fields/IsTrigger__c.field-meta.xml
<CustomField>
    <fullName>IsTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTrigger</label>
    <type>Checkbox</type>
</CustomField>