force-app/main/default/objects/LogDetail__c/fields/ObjectReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ObjectReferenceId__c</fullName>
    <label>Object Reference Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>