force-app/main/default/objects/LogDetail__c/fields/RunningUserId__c.field-meta.xml
<CustomField>
    <fullName>RunningUserId__c</fullName>
    <label>RunningUserId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>