force-app/main/default/objects/LogDetail__c/fields/RunningUserName__c.field-meta.xml
<CustomField>
    <fullName>RunningUserName__c</fullName>
    <label>Running User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>