force-app/main/default/objects/LogDetail__c/fields/TriggerSize__c.field-meta.xml
<CustomField>
    <fullName>TriggerSize__c</fullName>
    <label>TriggerSize</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>